--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             href="#page-top"
             style="padding: 0px"
           >
-            <span style="color:white">
+            <span style="color:white;font-family:sans-serif">
               <img
                 src="img/logos/logo.png"
                 width="50px"
