--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
           </button>
           <a
             class="navbar-brand page-scroll"
-            href="#page-top"
+            href="index.html"
             style="padding: 0px"
           >
             <span style="color: white; font-family: sans-serif">
